<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_color"
    tools:context=".CarMake">

    <ImageView
        android:id="@+id/randomImg"
        android:layout_width="0dp"
        android:layout_height="668dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/randomImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:text="@string/identify"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="406dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:dropDownSelector="@color/white"
        android:scrollbarThumbHorizontal="@color/white"
        android:scrollbarThumbVertical="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/getName"
        android:layout_width="207dp"
        android:layout_height="77dp"
        android:layout_marginBottom="672dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="@+id/randomImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="normal|bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/getName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/getName" />

    <TextView
        android:id="@+id/countView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getName"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>