<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_color"
    tools:context=".IdentifyCarImage">

    <TextView
        android:id="@+id/carName"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/car_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/showAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomImg3" />

    <ImageView
        android:id="@+id/randomImg1"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/randomImg"
        android:onClick="imageClick1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/randomImg2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/randomImg"
        android:onClick="imageClick2"
        app:layout_constraintBottom_toTopOf="@+id/randomImg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomImg1" />

    <ImageView
        android:id="@+id/randomImg3"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/randomImg"
        android:onClick="imageClick3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomImg2"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:onClick="startAction"
        android:text="@string/start"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/randomImg1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/showAnswer"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/correct_answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/correct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carName" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_oo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/carName"
        app:layout_constraintEnd_toStartOf="@+id/randomImg1"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/correct"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="correct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/showAnswer"
        app:layout_constraintTop_toBottomOf="@+id/carName"
        app:layout_constraintVertical_bias="0.304" />

</androidx.constraintlayout.widget.ConstraintLayout>