<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_color"
    tools:context=".Hint">

    <Button
        android:id="@+id/hintStart"
        android:layout_width="407dp"
        android:layout_height="54dp"
        android:onClick="start"
        android:text="@string/starthint"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/hintText"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintStart"
        app:layout_constraintVertical_bias="0.017" />

    <ImageView
        android:id="@+id/randomImg"
        android:layout_width="0dp"
        android:layout_height="444dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/randomImg"
        app:layout_constraintBottom_toTopOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintText" />

    <TextView
        android:id="@+id/lives"
        android:layout_width="408dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/lives"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintText"
        app:layout_constraintVertical_bias="0.991" />

    <EditText
        android:id="@+id/guess"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/lives"
        app:layout_constraintEnd_toStartOf="@+id/okay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomImg" />

    <Button
        android:id="@+id/okay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:backgroundTint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/guess" />

    <TextView
        android:id="@+id/count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00."
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guess"
        app:layout_constraintEnd_toEndOf="@+id/randomImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintText"
        app:layout_constraintVertical_bias="0.011" />

</androidx.constraintlayout.widget.ConstraintLayout>